--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "bcrypt": "^5.1.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
-    "mongoose": "^7.5.0"
+    "mongoose": "^7.5.0",
+    "nodemailer": "^6.9.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
